package HW.protect;

public class Armour implements Protection{
    @Override
    public int protect() {
        return 7;
    }
}
