package HW.protect;

public class ChainMail implements Protection {
    @Override
    public int protect() {
        return 3;
    }
}
