package HW.protect;

public interface Protection {
    int protect();
}
