package HW.weapons;

public interface Melee extends Weapon{
}
