package HW.weapons;

public interface Ranged extends Weapon {
    int distance();
}
