package HW.weapons;

public interface Weapon {
    int damage();
}
